tests/paczka1/fuzzy1/61786322.err
Error in line 5: GuBk A68 35,5
Error in line 10: wgRHa2 A68 65,6
Error in line 24: tPMB A56 75,2
Error in line 40: lo7qC5j4yZ9 A71 -2,6
